# Project-SoftwareEngineering

./: .gitignore  CMakeLists.txt  DesignByContract.h  Device.cpp  Device.h  Doxyfile  InputTest.cpp  InputTest.h  Job.cpp  Job.h  Output.cpp  Output.h  PrintingSystem.cpp  PrintingSystem.h  PrintingSystemGUI.cpp  PrintingSystemGUI.h  PrintingSystemImporter.cpp  PrintingSystemImporter.h  PrintingSystemMain.cpp  PrintingSystemUtils.cpp  PrintingSystemUtils.h  README.md  Utils.cpp  Utils.h  output.txt  tests.cpp
GUI_Compiled/: PrintingGUI  tests
Tests/: AdvancedOutputTest.cpp  AutomaticallyProcessTest.cpp  DeviceTest.cpp  EmissionsTest.cpp  InputTest.cpp  JobTest.cpp  ManuallyprocessTest.cpp  OutputTest.cpp
docs/html/: DesignByContract_8h_source.html  Device_8h_source.html  Job_8h_source.html  Output_8h_source.html  PrintingSystemGUI_8h_source.html  PrintingSystemImporter_8h_source.html  PrintingSystem_8h_source.html  Utils_8h_source.html  annotated.html  classBWDevice-members.html  classBWDevice.html  classBWDevice__coll__graph.md5  classBWDevice__inherit__graph.map  classBWJob-members.html  classBWJob.html  classBWJob__coll__graph.map  classBWJob__coll__graph.md5  classBWJob__inherit__graph.map  classBWJob__inherit__graph.md5  classBWPrinter-members.html  classBWPrinter.html  classBWPrinter__inherit__graph.map  classBWPrinter__inherit__graph.md5  classColorDevice-members.html  classColorDevice.html  classColorDevice__coll__graph.md5  classColorDevice__inherit__graph.map  classColorJob-members.html  classColorJob.html  classColorJob__coll__graph.map  classColorJob__coll__graph.md5  classColorJob__inherit__graph.md5  classColorPrinter-members.html  classColorPrinter.html  classColorPrinter__coll__graph.map  classColorPrinter__inherit__graph.md5  classConsoleOutputStream-members.html  classConsoleOutputStream.html  classConsoleOutputStream__coll__graph.map  classConsoleOutputStream__coll__graph.md5  (+75 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+4 more)
docs/latex/: annotated.tex  classBWDevice.tex  classBWDevice__inherit__graph.md5  classBWJob.tex  classBWJob__coll__graph.md5  classBWPrinter.tex  classBWPrinter__coll__graph.md5  classColorDevice.tex  classColorDevice__inherit__graph.md5  classColorJob.tex  classColorJob__coll__graph.md5  classColorJob__inherit__graph.md5  classColorPrinter.tex  classColorPrinter__coll__graph.md5  classConsoleOutputStream.tex  classConsoleOutputStream__coll__graph.md5  classDevice.tex  classDevice__inherit__graph.md5  classFileOutputStream.tex  classFileOutputStream__inherit__graph.md5  classJob.tex  classJob__inherit__graph.md5  classNoOutputStream.tex  classNoOutputStream__coll__graph.md5  classOutputStream.tex  classOutputStream__inherit__graph.md5  classPrinter.tex  classPrinterJob.tex  classPrinterJob__coll__graph.md5  classPrinterJob__inherit__graph.md5  classPrinter__coll__graph.md5  classPrinter__inherit__graph.md5  classPrintingSystem.tex  classPrintingSystemGUI.tex  classPrintingSystemGUI__coll__graph.md5  classPrintingSystemImporter.tex  classScanDevice.tex  classScanDevice__inherit__graph.md5  classScanJob.tex  classScanJob__coll__graph.md5  (+5 more)
testXMLs/: System1.xml  XML_test.xml  advancedOutput.txt  error.txt  inputlegal1.xml  inputlegal3.xml  inputlegal4.xml  log.txt  overview all syntaxerrors with corresponding numbers.txt  xmlsyntaxerror1.xml  xmlsyntaxerror2.txt  xmlsyntaxerror2.xml  xmlsyntaxerror3.xml  xmlsyntaxerror4.xml
testXMLs/InputTests/: inputillegal.txt
testXMLs/illegalinput/: inputillegal3.xml  inputtest1.txt  inputtest2.txt
(+79 files in other folders)
